@@ -1,3 +1,8 @@
+2002-08-10  Per Bothner  <per@bothner.com>
+
+	* ApplyExp.java (compile):  Don't call using tailcall-handling API
+	unless either call is a tail-call or target is ConsumerTarget.
+
 2002-08-09  Per Bothner  <per@bothner.com>
 
 	* ModuleBody.java (runAsMain):  Do defineAll, so exported bindings
